Tentative fix for Modal Width and Height on smaller screens

--- a/frontend/src/components/Form/Form.css
+++ b/frontend/src/components/Form/Form.css
@@ -1,4 +1,5 @@
 form {
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     row-gap: 0.5rem;
