--- a/frontend/src/components/Modal/Modal.css
+++ b/frontend/src/components/Modal/Modal.css
@@ -4,7 +4,8 @@
     left: 50%;
     top: 50%;
     translate: -50% -50%;
-    width: clamp(270px, 50vw, 600px);
+    width: clamp(270px, 80vw, 600px);
+    height: clamp(360px, 60vh, 500px);
     display: flex;
     flex-direction: column;
     align-items: center;
